# Projet-ML

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
mlp/: __init__.py  activation.py  linear.py  loss.py  module.py  optim.py  optimizers.py  sequential.py  utils.py
paper/: paper.typ  template.typ
scripts/: benchmark_activation_functions.py  benchmark_autoencoder_denoiser.py  benchmark_autoencoder_matrix.py  benchmark_batch_size.py  benchmark_hidden_layers_relu.py  benchmark_hidden_layers_tanh.py  benchmark_hidden_size.py  benchmark_initialization.py  benchmark_linear_classification.py  benchmark_linear_regression.py  benchmark_mnist.py  benchmark_mnistcomparison.py  benchmark_non_linear_classification.py  benchmark_non_linear_classification_adam.py  benchmark_optimizer_comparison.py  train_linear_regression.py  train_mnist.py  utils.py  visualize_activation_functions.py  visualize_autoencoder_denoiser.py  visualize_autoencoder_examples.py  visualize_autoencoder_matrix.py  visualize_batch_size.py  visualize_hidden_size.py  visualize_latent_centroids.py  visualize_latent_space.py  visualize_linear_classification.py  visualize_linear_regression.py  visualize_mnist.py  visualize_mnistTanH.py  visualize_non_linear_classification.py  visualize_non_linear_classification_adam.py  visualize_optimizer_comparison.py
src/: activation_func.py  loss.py  memory.py  mltools.py  module.py  networks.py  optimizers.py  projet_etu.py  torch_comparison.py
src/mlp/: __init__.py
tests/: 1. Initialization.ipynb  2. Optimizer.ipynb  3. Compression.ipynb  activations.ipynb  autoencoder.ipynb  batch.ipynb  reinforcement_learning.ipynb
