[project]
name = "mlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Paul Chambaz", email = "paul.chambaz@tutanota.com" },
  { name = "Frédéric Li Combeau", email = "frederic.li_combeau@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.ruff]
line-length = 80
